# matlok-soundboard

./: .gitignore  Cargo.toml  README.md  index.html  rust-toolchain.toml
.cargo/: config.toml
scripts/: build.cmd  build.ps1  generate-assets-manifest.mjs  serve.cmd  serve.ps1
src/: lib.rs
www/: assets-manifest.json  index.html  main.js  style.css
www/pkg/: matlok_soundboard.d.ts  matlok_soundboard.js  matlok_soundboard_bg.wasm  matlok_soundboard_bg.wasm.d.ts  package.json
