[package]
name = "matlok_soundboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlButtonElement",
  "HtmlImageElement",
  "HtmlAudioElement",
  "Event",
  "Response",
  "console"
]
